create components and readme.md, build

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 .App {
   text-align: center;
 }
+
+.persons{
+	padding: 50px 20px;
+
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	gap: 20px;
+}
